# ossci-index

dependency-discovery/: README.md
dependency-discovery/python/: README.md
dependency-discovery/python/installed-via-pip/: README.md  analyze.installed.sh  analyze_dependencies.py  count_occurrences.sh  install.sh  questions.md
dependency-discovery/python/installed-via-pip/tst/hello_world/: main.py  setup.cfg
dependency-discovery/python/installed-via-pip/tst/hello_world/hello_world.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dependency-discovery/python/numfocus/: README.md
dependency-discovery/python/numfocus-1.data/: README.md
dependency-discovery/python/numfocus/v1/: README.md
dependency-discovery/python/numfocus/v1/data/: README.md  manual.list  non-standard-package.dependencies  problematic.packages.md
dependency-discovery/python/numfocus/v1/results/wheel.dependencies/: MDAnalysis.dependencies  README.md  arviz.dependencies  astropy.dependencies  bokeh.dependencies  cantera.dependencies  dask.dependencies  diffeqpy.dependencies  fenics.dependencies  ipython.dependencies  jupyter.dependencies  matplotlib.dependencies  napari.dependencies  networkx.dependencies  nibabel.dependencies  pymc.dependencies  (+12 more)
dependency-discovery/python/sourcegraph/: README.md  find_dependency_leaves.py  queries  query_file.template.json  requirements.txt  via-curl.with-url.sh  via-src.no-url.sh  via-src.with-url.sh
dependency-discovery/python/wheel-based/: README.md  fetch+print_wheel_direct_dependencies.sh  fetch+print_wheel_recursive_dependencies.py  fetch+print_wheel_recursive_dependencies.sh  read_metadata_file.py
