# Setuptools does not yet support modern pyproject.toml but will do so in the
# future
[metadata]
name = hello-world
version = 0.5.1.dev0
author = Me
email = fenics-dev@googlegroups.com
maintainer = FEniCS Project Steering Council
description = The FEniCSx Form Compiler
url = https://github.com/FEniCS/ffcx
project_urls =
    Homepage = https://fenicsproject.org
    Documentation = https://docs.fenicsproject.org
    Issues = https://github.com/FEniCS/ffcx/issues
    Funding = https://numfocus.org/donate
long_description = file: README.md
long_description_content_type = text/markdown
license=LGPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Code Generators

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    foobar